plugins/kotlin/idea/tests/testData/gradle/hierarchicalMultiplatformImport/kT46417NativePlatformTestSourceSets/p2/src/iosTest/kotlin/P2IosTest.kt.after
import kotlin.test.Test
import kotlin.test.assertEquals

class <!LINE_MARKER("descr='Run Test'")!>P2IosTest<!> {

    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>testCommonMain<!>() {
        val x = P1CommonMain()
        assertEquals(x.invoke(), P1CommonMain())
    }

    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>testNativeMain<!>() {
        val x = P1NativeMain()
        assertEquals(x.invoke(), P1NativeMain())
    }

    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>testIosMain<!>() {
        val x = P1IosMain()
        assertEquals(x.invoke(), P1IosMain())
    }
}
